Adds an animation when the bar is hovered over and other minor styling

--- a/topBar.css
+++ b/topBar.css
@@ -3,7 +3,7 @@ header {
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    background-color: blue;
+    background-color: cornflowerblue;
     margin: 0;
     position: absolute;
     left: 0;
@@ -19,15 +19,24 @@ a {
     align-items: center;
     justify-content: center;
     color: navy;
-    background-color: white;
+    background-color: aliceblue;
     margin-left: 2rem;
     height: 2.5rem;
     min-width: 2.5rem;
+    border-radius: 0.5rem;
+    font-weight: bold;
 }
 
 a:hover {
-    outline: 3px solid blue;
-    outline-offset: -3px;
+    animation-name: transition-background;
+    animation-duration: 0.5s;
+    animation-fill-mode: forwards;
+}
+
+@keyframes transition-background {
+    to {
+        background-color: white;
+    }
 }
 
 a > img {
