--- a/style.css
+++ b/style.css
@@ -3,10 +3,10 @@ body {
 }
 
 iframe {
-    position: absolute;
+    position: fixed;
     left: 0;
     top: 0;
     width: 100%;
-    height: fit-content;
+    height: 4rem;
     border: none;
 }
