--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+:root {
+    --top-bar-height: 4rem;
+}
+
 body {
     font-family: sans-serif;
 }
@@ -7,6 +11,19 @@ iframe {
     left: 0;
     top: 0;
     width: 100%;
-    height: 4rem;
+    height: var(--top-bar-height);
     border: none;
+}
+
+div#content {
+    position: fixed;
+    height: calc(100vh - var(--top-bar-height));
+    left: 0;
+    bottom: 0;
+    overflow: auto;
+    width: 100%;
+}
+
+div#content * {
+    position: relative;
 }
